--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Dice Wars</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="VOCpz0J_dwFUi9NQczEduLMUDZFh60Nd2Hf372tdK3o" />
     <link rel="shortcut icon" type="image/x-icon" href="./images/1 (3).png" style="border-radius: 50%;"/>
 
 
